[package]
name = "manager"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "manager"
path = "src/lib.rs"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[dependencies]
env_logger = "0.10.0"
log = "0.4.14"
toml_edit = { version = "0.16.2", features = ["easy", "serde"] }
serde = { version = "1.0.145", features = ["derive"] }
anyhow = "1.0.44"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.68"
k8s-openapi = { version = "0.17.0", default-features = false, features = ["v1_26"] } 
kube = { version = "0.78.0", default-features = false, features = ["client", "rustls-tls", "runtime", "derive"] }


